# muverse

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  paper_draft.tex  pipeline_output.json  pyproject.toml
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/lib/: api.ts
public/: index.html
src/: integration.py
src/agents/: base.py  critic.py  literature.py  orchestrator.py  simulator.py  theorist.py  writer.py
src/api/: main.py  websocket.py
src/api/routes/: agents.py  math.py  paper.py  simulations.py  theory.py
src/core/: paper_schema.py  seed_theory.py  simulation_schema.py  theory_schema.py
src/llm/: provider.py
src/llm/prompts/: critic.md  literature.md  simulator.md  theorist.md  writer.md
src/math_engine/numerical/: branch_ensemble.py  monte_carlo.py  ode_solvers.py
src/math_engine/quantum/: decoherence.py  langevin.py
src/math_engine/symbolic/: fokker_planck.py  influence_functional.py  jarzynski.py  landauer_bekenstein.py  partition_functions.py  path_integrals.py  wick_rotation.py  wkb_semiclassical.py
src/paper/: citations.py  figures.py  latex_generator.py  outline.py
src/simulations/: sim1_branch_boltzmann.py  sim2_nn_analog.py  sim3_quantum_langevin.py  sim4_born_deviation.py  sim5_lindblad_test.py  sim6_heom_nonmarkov.py  sim7_landauer_pointer.py  sim8_jarzynski_test.py
src/storage/: database.py  models.py
theory/: MWI, Evolution, and Energy Constraints.txt  ThermoDynamicDarwinism.md
(+5 files in other folders)
