[project]
name = "muverse"
version = "0.1.0"
description = "Agentic Physics Theory Development Platform — Thermodynamic Darwinism"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "litellm>=1.55.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "sympy>=1.13.0",
    "numpy>=2.1.0",
    "scipy>=1.14.0",
    "jax[cpu]>=0.4.35",
    "qutip>=5.0.0",
    "matplotlib>=3.9.0",
    "plotly>=5.24.0",
    "asyncpg>=0.30.0",
    "python-dotenv>=1.0.0",
    "websockets>=14.0",
    "httpx>=0.28.0",
    "arxiv>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
